err/qalsadi.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qalsadi'...
Compiling './lib/python3.5/site-packages/qalsadi/analex.py'...
***   File "./lib/python3.5/site-packages/qalsadi/analex.py", line 202
    print "is verb", rabti,len(resulted_data);
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qalsadi/arabicdictionary.py'...
***   File "./lib/python3.5/site-packages/qalsadi/arabicdictionary.py", line 48
    print "Fatal Error Can't find the database file", file_path
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/qalsadi/stem_noun.py'...
***   File "./lib/python3.5/site-packages/qalsadi/stem_noun.py", line 184
    if self.debug: print "\t", "-".join([procletic,stem,encletic]).encode("utf8") ;
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qalsadi/stem_unknown.py'...
***   File "./lib/python3.5/site-packages/qalsadi/stem_unknown.py", line 174
    if self.debug: print "\t", "-".join([procletic,stem,encletic]).encode("utf8") ;
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qalsadi/stem_verb.py'...
***   File "./lib/python3.5/site-packages/qalsadi/stem_verb.py", line 58
    print 'stem_verb_const.CONJ_PREFIX_LETTERS', stem_verb_const.CONJ_PREFIX_LETTERS.encode('utf8');
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qalsadi/test.py'...
***   File "./lib/python3.5/site-packages/qalsadi/test.py", line 17
    print 'stem_verb_const.CONJ_PREFIX_LETTERS', stem_verb_const.CONJ_PREFIX_LETTERS.encode('utf8');
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qalsadi/wordfreqdictionaryclass.py'...
***   File "./lib/python3.5/site-packages/qalsadi/wordfreqdictionaryclass.py", line 68
    print "Fatal Error Can't find the database file", file_path
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/qalsadi-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
